Removed the relax 2.1.0 and 2.2.0 distribution archives from the Gna! download infrastructure.

--- a/download.html
+++ b/download.html
@@ -409,39 +409,39 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2375">Version 2.2.0</a> (2013-01-27)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.2.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>c53df2d5af7a4a909fbc954c86eb30b1</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58822793</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.2.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>5d22179372261593b28a1e89c17bd494</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58908971</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.Win32.zip" title="relax">relax-2.2.0.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.Win32.zip</a></td>
       <td><tt><small>c6522f04c68ff444d40cce8476df4bf5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60912427</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.Darwin.dmg" title="relax">relax-2.2.0.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.Darwin.dmg</a></td>
       <td><tt><small>fb47296f772e57270645c55acca8b014</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>232517234</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.src.tar.bz2" title="relax">relax-2.2.0.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.src.tar.bz2</a></td>
       <td><tt><small>febbd1b413d4949df49b197743fcc70a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58904246</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.src.zip" title="relax">relax-2.2.0.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.0.src.zip</a></td>
       <td><tt><small>ef51747d949dbf7d6161218ec9be5e4c</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60972014</td>
     </tr>
   </tbody>
@@ -539,39 +539,39 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2358">Version 2.1.0</a> (2012-07-12)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>cbcb3115318ce0039b654fc6be776cda</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>22045763</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>fddbe4db3cc14a425cf7bb1af24d40e7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>22058393</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip" title="relax">relax-2.1.0.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.Win32.zip</a></td>
       <td><tt><small>a29f259b6ad1636af600f1ecc9cf1b7a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>24106525</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg" title="relax">relax-2.1.0.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.Darwin.dmg</a></td>
       <td><tt><small>4bca18ac75242e2f48cac793210af35b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>159065388</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2" title="relax">relax-2.1.0.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.src.tar.bz2</a></td>
       <td><tt><small>31de49e99d26df5421fa81b086418725</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>22054720</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip" title="relax">relax-2.1.0.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.0.src.zip</a></td>
       <td><tt><small>4efce1d7238c5d87f5b82d7543d07d36</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>24146965</td>
     </tr>
   </tbody>
