Added the http://archive.is/www.nmr-relax.com webpage archives to http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -109,6 +109,11 @@
       <td>Pro-Linux ist eine der gr&#246;&#223;ten deutschsprachigen Seiten zum Thema Linux.</td>
       <td>The relax page is <a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100">http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100</a>.</td>
     </tr>
+    <tr id="archive.is" class="link_tr">
+      <td class="link_logo_td"><a href="http://archive.is/www.nmr-relax.com"><img src="images/archive_is.png" alt="archive.is" class="image"/></a></td>
+      <td>The archive.is personal Wayback Machine.</td>
+      <td>The relax pages are archived at <a href="http://archive.is/www.nmr-relax.com">http://archive.is/www.nmr-relax.com</a>.</td>
+    </tr>
   </tbody>
 </table>
 
