--- a/links.html
+++ b/links.html
@@ -34,12 +34,12 @@
       <li><a href="links.html#Gmane">Gmane</a></li>
       <li><a href="links.html#Mail_archive">The Mail Archive</a></li>
       <li><a href="links.html#Freecode">Freecode</a></li>
-      <li><a href="links.html#Cia_vc">CIA.vc</a></li>
       <li><a href="links.html#Linuxlinks">Linuxlinks.com</a></li>
       <li><a href="links.html#DMOZ">DMOZ open directory project</a></li>
       <li><a href="links.html#Freecode">Freecode</a></li>
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
+      <li><a href="links.html#archive_is">archive.is</a></li>
      </ul></li>
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
      <ul>
@@ -83,11 +83,6 @@
       <td class="link_logo_td"><a href="http://freecode.com/projects/nmr-relax"><img src="images/freecode.png" alt="Freecode logo" class="image"/></a></td>
       <td>Freecode, previously known as freshmeat, is the Web&#39;s largest index of Unix and cross-platform software (mainly open source).</td>
       <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a>.</td>
-    </tr>
-    <tr id="Cia_vc" class="link_tr">
-      <td class="link_logo_td"><a href="http://cia.vc/stats/project/relax"><img src="images/cia_vc_small.png" alt="Cia.vc logo" class="image"/></a></td>
-      <td>The open source version control informant.  CIA tracks open source projects in real-time.</td>
-      <td>The relax real-time open source activity stats page is <a href="http://cia.vc/stats/project/relax">http://cia.vc/stats/project/relax</a>.  This website also has pages for each of the relax developers (in alphabetical order):  <a href="http://cia.vc/stats/author/bugman">Edward d&#39;Auvergne</a>, <a href="http://cia.vc/stats/author/michaelbieri">Michael Bieri</a>, <a href="http://cia.vc/stats/author/macraild">Chris MacRaild</a>, <a href="http://cia.vc/stats/author/semor">S&#233;bastien Morin</a>, <a href="http://cia.vc/stats/author/pansapiens">Andrew Perry</a>, <a href="http://cia.vc/stats/author/han87">Han Sun</a>, <a href="http://cia.vc/stats/author/varioustoxins">Gary Thompson</a>.</td>
     </tr>
     <tr id="Linuxlinks" class="link_tr">
       <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
