Fix for the internal menu at http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -33,10 +33,10 @@
       <li><a href="links.html#Gna">Gna!</a></li>
       <li><a href="links.html#Gmane">Gmane</a></li>
       <li><a href="links.html#Mail_archive">The Mail Archive</a></li>
+      <li><a href="links.html#MARC">MARC</a></li>
       <li><a href="links.html#Freecode">Freecode</a></li>
       <li><a href="links.html#Linuxlinks">Linuxlinks.com</a></li>
       <li><a href="links.html#DMOZ">DMOZ open directory project</a></li>
-      <li><a href="links.html#Freecode">Freecode</a></li>
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
       <li><a href="links.html#archive_is">archive.is</a></li>
