--- a/links.html
+++ b/links.html
@@ -86,9 +86,9 @@
       <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a>.</td>
     </tr>
     <tr id="Ohloh" class="link_tr">
-      <td class="link_logo_td"><a href="https://www.ohloh.net/p/nmr-relax"><img src="images/ohlohlogo100.png" alt="Ohloh logo" class="image"/></a></td>
+      <td class="link_logo_td"><script type="text/javascript" src="http://www.ohloh.net/p/633408/widgets/project_basic_stats.js"></script></td>
       <td>Ohloh is a free, public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
-      <td>The relax project page is <a href="https://www.ohloh.net/p/nmr-relax">https://www.ohloh.net/p/nmr-relax</a>.  The relax developers pages are:  <a href="https://www.ohloh.net/accounts/true_bugman">Edward d&#39;Auvergne</a>.</td>
+      <td>The relax project page is <a href="https://www.ohloh.net/p/nmr-relax">https://www.ohloh.net/p/nmr-relax</a>.  The relax developers pages are:  <a href='https://www.ohloh.net/accounts/239062?ref=Detailed' target='_top'><img alt="Ohloh profile for Edward d'Auvergne" border='0' height='35' src='https://www.ohloh.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
     </tr>
     <tr id="Linuxlinks" class="link_tr">
       <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
