Added minfx and bmrblib to http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -41,12 +41,20 @@
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
       <li><a href="links.html#archive_is">archive.is</a></li>
-     </ul></li>
+     </ul>
+    </li>
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
      <ul>
       <li><a href="links.html#Nessy">NESSY</a></li>
       <li><a href="links.html#PDC">Bruker PDC</a></li>
-     </ul></li>
+     </ul>
+    </li>
+    <li><a href="links.html#relax_libraries">relax libraries</a>
+     <ul>
+      <li><a href="links.html#minfx">minfx</a></li>
+      <li><a href="links.html#bmrblib">bmrblib</a></li>
+     </ul>
+    </li>
     </ul>
   </div>
 
@@ -148,7 +156,28 @@
 </table>
 
     </div>
- </div>
+    <div id="relax_libraries" class="main_h2">
+      <h2>relax libraries</h2>
+
+<table cellpadding="5">
+  <tbody>
+    <tr>
+      <td><strong>Site</strong></td>
+      <td><strong>Description</strong></td>
+    </tr>
+    <tr id="minfx" class="link_tr">
+      <td class="link_logo_td"><a href="https://gna.org/projects/minfx/"><img src="images/minfx_logo.png" alt="minfx logo" class="image"/></a></td>
+      <td>The minfx project is a Python package for numerical optimisation, being a large collection of standard minimisation algorithms.  This is used by relax for the optimisation user functions.</td>
+    </tr>
+    <tr id="bmrblib" class="link_tr">
+      <td class="link_logo_td"><a href="https://gna.org/projects/bmrblib/"><img src="images/bmrblib_logo.png" alt="Bmrblib" class="image"/></a></td>
+      <td>Bmrblib is an API abstracting the <a href="http://www.bmrb.wisc.edu/">BioMagResBank (BMRB)</a> NMR-STAR format. It allows the writing of NMR-STAR files for BMRB data deposition and the reading and easy extraction of data from files residing in the BMRB data bank, all without knowledge of the Self-Defining Text Archive and Retrieval (STAR) format.  This is used by relax to interface with the BMRB.</td>
+    </tr>
+  </tbody>
+</table>
+
+    </div>
+  </div>
 </div>
 
 <!--#include virtual="footer.html" -->
