--- a/links.html
+++ b/links.html
@@ -35,12 +35,13 @@
       <li><a href="links.html#Mail_archive">The Mail Archive</a></li>
       <li><a href="links.html#MARC">MARC</a></li>
       <li><a href="links.html#Freecode">Freecode</a></li>
-      <li><a href="links.html#Ohloh">Ohloh</a></li>
       <li><a href="links.html#Linuxlinks">Linuxlinks.com</a></li>
+      <li><a href="links.html#Free_software_directory">Free Software Directory</a></li>
       <li><a href="links.html#DMOZ">DMOZ open directory project</a></li>
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
       <li><a href="links.html#archive_is">archive.is</a></li>
+      <li><a href="links.html#Ohloh">Ohloh</a></li>
      </ul>
     </li>
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
@@ -98,17 +99,18 @@
       <td>The relax project page is <a href="http://freecode.com/projects/nmr-relax">http://freecode.com/projects/nmr-relax</a>.  The relax developers pages are:  <a href="http://freecode.com/users/dauvergne">Edward d&#39;Auvergne</a>.</td>
     </tr>
 
-    <tr id="Ohloh" class="link_tr">
-      <td class="link_logo_td"><script type="text/javascript" src="http://www.ohloh.net/p/633408/widgets/project_basic_stats.js"></script></td>
-      <td>Ohloh is a free, public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
-      <td>The relax project page is <a href="https://www.ohloh.net/p/nmr-relax">https://www.ohloh.net/p/nmr-relax</a>.  The relax developers pages are:  <a href='https://www.ohloh.net/accounts/239062?ref=Detailed' target='_top'><img alt="Ohloh profile for Edward d'Auvergne" border='0' height='35' src='https://www.ohloh.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
-    </tr>
-
     <tr id="Linuxlinks" class="link_tr">
       <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com, the Linux portal, is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
+
+    <tr id="Free_software_directory" class="link_tr">
+      <td class="link_logo_td"><a href="http://directory.fsf.org/wiki/Relax"><img src="images/heckert_gnu.small.png" alt="The Free Software Directory" class="image"/></a></td>
+      <td>The Free Software Directory.</td>
+      <td>The relax project page is <a href="http://directory.fsf.org/wiki/Relax">http://directory.fsf.org/wiki/Relax</a>.</td>
+    </tr>
+
     <tr id="DMOZ" class="link_tr">
       <td class="link_logo_td"><a href="http://www.dmoz.org/Science/Chemistry/Nuclear_Magnetic_Resonance/Software/"><img src="images/dmoz.gif" alt="DMOZ Open Directory Project logo" class="image"/></a></td>
       <td>The DMOZ Open Directory Project.</td>
@@ -131,6 +133,16 @@
       <td class="link_logo_td"><a href="http://archive.is/www.nmr-relax.com"><img src="images/archive_is.png" alt="archive.is" class="image"/></a></td>
       <td>The archive.is personal Wayback Machine.</td>
       <td>The relax pages are archived at <a href="http://archive.is/www.nmr-relax.com">http://archive.is/www.nmr-relax.com</a>.</td>
+    </tr>
+  </tbody>
+</table>
+
+<table cellpadding="5">
+  <tbody>
+    <tr id="Ohloh" class="link_tr">
+      <td class="link_logo_td"><script type="text/javascript" src="http://www.ohloh.net/p/633408/widgets/project_basic_stats.js"></script></td>
+      <td>Ohloh is a free, public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
+      <td>The relax project page is <a href="https://www.ohloh.net/p/nmr-relax">https://www.ohloh.net/p/nmr-relax</a>.  The relax developers pages are:<br>  <a href='https://www.ohloh.net/accounts/239062?ref=Detailed' target='_top'><img alt="Ohloh profile for Edward d'Auvergne" border='0' height='35' src='https://www.ohloh.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
     </tr>
   </tbody>
 </table>
