--- a/links.html
+++ b/links.html
@@ -112,7 +112,7 @@
     </tr>
 
     <tr id="Linuxlinks" class="link_tr">
-      <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_smaller.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com, the Linux portal, is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
