--- a/download.html
+++ b/download.html
@@ -447,39 +447,39 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2376">Version 2.2.1</a> (2013-02-01)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.GNU-Linux.i686.tar.bz2" title="relax">relax-2.2.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>29a1c7c342570a605993034cd1476822</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58818541</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.2.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>08fa36022c343e7f745403a683f9304b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58951499</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.Win32.zip" title="relax">relax-2.2.1.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.Win32.zip</a></td>
       <td><tt><small>d1f4c80bc9738c521c45105cc41c3a84</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>61016998</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.Darwin.dmg" title="relax">relax-2.2.1.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.Darwin.dmg</a></td>
       <td><tt><small>06e53c82f7cd13870a042717f31b2b05</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>232729086</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.src.tar.bz2" title="relax">relax-2.2.1.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.src.tar.bz2</a></td>
       <td><tt><small>110582249e554649b713696bd70aa69d</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58950056</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.src.zip" title="relax">relax-2.2.1.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.2.1.src.zip</a></td>
       <td><tt><small>52d4510249764d018e7807c8ff6572b5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.2.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>61063062</td>
     </tr>
 
@@ -539,77 +539,77 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2369">Version 2.1.2</a> (2012-10-17)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.GNU-Linux.i686.tar.bz2" title="relax">relax-2.1.2.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>15b9e9ca6d6d5eb894bcf1759fba2076</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58853716</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.1.2.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>37765ee99c30a0764d3f32e864b8c8aa</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58831413</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.Win32.zip" title="relax">relax-2.1.2.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.Win32.zip</a></td>
       <td><tt><small>d652531e37db09aecb5c9b21ce140488</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60896196</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.Darwin.dmg" title="relax">relax-2.1.2.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.Darwin.dmg</a></td>
       <td><tt><small>1b8d611c0a2b34901c1499c84bef0a51</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>232595509</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.src.tar.bz2" title="relax">relax-2.1.2.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.src.tar.bz2</a></td>
       <td><tt><small>71acc50c457d02aff7e430f2acbb49c3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58826190</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.src.zip" title="relax">relax-2.1.2.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.2.src.zip</a></td>
       <td><tt><small>a94e6f5f9d10689bbf4dfdaaaaaa02c7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.2.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60940019</td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2362">Version 2.1.1</a> (2012-09-21)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.GNU-Linux.i686.tar.bz2" title="relax">relax-2.1.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>bf422f6ddb191f30669c2e78b40af7da</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58361581</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-2.1.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>e2f76816d38a91d668258d9ccae4d9b9</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58464094</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.Win32.zip" title="relax">relax-2.1.1.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.Win32.zip</a></td>
       <td><tt><small>c8a95a6833d087db4884f1ec2640ae72</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60497220</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.Darwin.dmg" title="relax">relax-2.1.1.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.Darwin.dmg</a></td>
       <td><tt><small>8c612a5cbbb183b2472f2d294efdfade</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>231896955</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.src.tar.bz2" title="relax">relax-2.1.1.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.src.tar.bz2</a></td>
       <td><tt><small>0bf3d0ffe8624052a2fc609fc82d75e5</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>58454528</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.src.zip" title="relax">relax-2.1.1.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-2.1.1.src.zip</a></td>
       <td><tt><small>e9abf2881128e7ce743cc1992fbfe51a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-2.1.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>60541151</td>
     </tr>
 
