--- a/head.html
+++ b/head.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <!--relax css-->
-  <link rel="stylesheet" type="text/css" href="relax.css"/>
+  <link rel="stylesheet" type="text/css" href="http://www.nmr-relax.com/relax.css"/>
 
   <!--Google analytics JS-->
   <script type="text/javascript">
