Added the Open Source Software Directory to the http://www.nmr-relax.com/links.html webpage.
The URL with the relax link is http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio

--- a/links.html
+++ b/links.html
@@ -40,6 +40,7 @@
       <li><a href="links.html#Linuxlinks">Linuxlinks.com</a></li>
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
+      <li><a href="links.html#Open_source_software_directory">Open Source Software Directory</a></li>
       <li><a href="links.html#archive_is">archive.is</a></li>
       <li><a href="links.html#Ohloh">Ohloh</a></li>
      </ul>
@@ -127,6 +128,12 @@
       <td class="link_logo_td"><a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..17723.100"><img src="images/prolinux_small.png" alt="Pro-Linux.de logo" class="image"/></a></td>
       <td>Pro-Linux ist eine der gr&#246;&#223;ten deutschsprachigen Seiten zum Thema Linux.</td>
       <td>The relax page is <a href="http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100">http://www.pro-linux.de/cgi-bin/DBApp/check.cgi?ShowApp..10010.100</a>.</td>
+    </tr>
+
+    <tr id="Open_source_software_directory" class="link_tr">
+      <td class="link_logo_td"><a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio"><img src="images/open_source_software_directory.png" alt="Open Source Software Directory logo" class="image"/></a></td>
+      <td>Use the Open Source Software Directory to find the best free and open-source software for home and business.</td>
+      <td>On the chemistry and biology page <a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio">http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio</a>.</td>
     </tr>
 
     <tr id="archive.is" class="link_tr">
