Updated http://www.nmr-relax.com/windows_devel.html to include another SCons bug.
This is the bug http://scons.tigris.org/issues/show_bug.cgi?id=2849 giving the error:

'cl' is not recognized as an internal or external command, operable program or batch file.

which the SCons developers stubbornly refuse to fix!!!

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -45,7 +45,8 @@
      <li><a href="#MSVS_probs">2.4 relax module compilation problems</a>
      <ul>
       <li><a href="#MSVS_python_issues">2.4.1 Python issues</a></li>
-      <li><a href="#MSVS_scons_issues">2.4.2 SCons issues</a></li>
+      <li><a href="#MSVS_scons_issues">2.4.2 SCons issues (old SCons installs)</a></li>
+      <li><a href="#MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVC compiler on 64-bit MS Windows)</a></li>
      </ul></li>
     </ul></li>
 
@@ -171,7 +172,7 @@
 
       <em>/* #include &#60;basetsdh&#62; */</em>
 
-     <h3 id="MSVS_scons_issues">2.4.2 SCons issues</h3>
+     <h3 id="MSVS_scons_issues">2.4.2 SCons issues (old SCons installs)</h3>
       <p>For SCons versions &#060; 0.96.92 the following error may occur:</p>
 
       <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
@@ -203,6 +204,23 @@
         <ul class="code_ul">
          <li>K &#061; 'Software\\Microsoft\\VCExpress\\' &#043; str(version_num)</li>
         </ul></li>
+      </ul>
+
+     <h3 id="MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVC compiler on 64-bit MS Windows)</h3>
+
+      <p>A similar error message is seen if you use the 32-bit MSVC compiler on 64-bit MS Windows.  You will probably see the error:</p>
+
+      <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
+
+      <p>This is caused by a <a href="http://scons.tigris.org/issues/show_bug.cgi?id=2849">bug in the SCons program that the SCons developers stubbornly refuse to fix</a>.  The fix is quite simple, just find the Tools/MSCommon/vc.py or Tool/MSCommon/vc.py file in your installed SCons version.  Find the msvc_find_valid_batch_script() function in that file.  Then change the line:</p>
+      <ul class="code_ul">
+       <li>if not req_target_platform and target_platform in ('amd64','x86_64'):</li>
+      </ul>
+
+      <p>To:</p>
+
+      <ul class="code_ul">
+       <li>if target_platform in ('amd64','x86_64'):</li>
       </ul>
 
    </div>
