Small edits of the http://www.nmr-relax.com/windows_devel.html webpage.

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -45,8 +45,8 @@
      <li><a href="#MSVS_probs">2.4 relax module compilation problems</a>
      <ul>
       <li><a href="#MSVS_python_issues">2.4.1 Python issues</a></li>
-      <li><a href="#MSVS_scons_issues">2.4.2 SCons issues (old SCons installs)</a></li>
-      <li><a href="#MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVC compiler on 64-bit MS Windows)</a></li>
+      <li><a href="#MSVS_scons_issues">2.4.2 SCons issues (cannot find the MSVS compiler)</a></li>
+      <li><a href="#MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVS compiler on 64-bit MS Windows)</a></li>
      </ul></li>
     </ul></li>
 
@@ -172,12 +172,12 @@
 
       <em>/* #include &#60;basetsdh&#62; */</em>
 
-     <h3 id="MSVS_scons_issues">2.4.2 SCons issues (old SCons installs)</h3>
+     <h3 id="MSVS_scons_issues">2.4.2 SCons issues (cannot find the MSVS compiler)</h3>
       <p>For SCons versions &#060; 0.96.92 the following error may occur:</p>
 
       <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
 
-      <p>To fix the problem edit the file '<em>scons-version\SCons\Tool\msvs.py</em>' in the Python24 installation directory, where <em>version</em> is the installed SCons version.  Within the function '<em>get_msvs_install_dirs()</em>' (at line 1319), change the lines:</p>
+      <p>To fix the problem edit the file '<em>scons-version\SCons\Tool\msvs.py</em>' in the Python installation directory, where <em>version</em> is the installed SCons version.  Within the function '<em>get_msvs_install_dirs()</em>' (at line 1319), change the lines:</p>
 
       <ul class="code_ul">
        <li>K &#061; 'Software\\Microsoft\\VisualStudio\\' &#043; str(version_num)</li>
@@ -206,13 +206,13 @@
         </ul></li>
       </ul>
 
-     <h3 id="MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVC compiler on 64-bit MS Windows)</h3>
+     <h3 id="MSVS_scons_issues_32bit">2.4.3 SCons issues (32-bit MSVS compiler on 64-bit MS Windows)</h3>
 
-      <p>A similar error message is seen if you use the 32-bit MSVC compiler on 64-bit MS Windows.  This is for all SCons versions &#060;= 2.3.0.  After typing 'scons', you will see the error:</p>
+      <p>A similar error message is seen if you use the 32-bit MSVS compiler on 64-bit MS Windows.  This is for all SCons versions &#060;= 2.3.0.  After typing 'scons', you will see the error:</p>
 
       <em>'cl' is not recognized as an internal or external command, operable program or batch file.</em>
 
-      <p>This is caused by a <a href="http://scons.tigris.org/issues/show_bug.cgi?id=2849">bug in the SCons program</a>.  The fix is quite simple, just find the Tools/MSCommon/vc.py or Tool/MSCommon/vc.py file in your installed SCons version.  Find the msvc_find_valid_batch_script() function in that file.  Then change the line:</p>
+      <p>This is caused by a <a href="http://scons.tigris.org/issues/show_bug.cgi?id=2849">bug in the SCons program</a>.  The fix is quite simple, just find the '<em>Tools\MSCommon\vc.py</em>' or '<em>Tool\MSCommon\vc.py</em>' file in your installed SCons version.  Find the '<em>msvc_find_valid_batch_script()</em>' function in that file.  Then change the line:</p>
       <ul class="code_ul">
        <li>if not req_target_platform and target_platform in ('amd64','x86_64'):</li>
       </ul>
