Updated the MSVS section of the webpage http://www.nmr-relax.com/windows_devel.html.
This has been updated for the information from 2005 to to that of 2013.  Links for various versions
of MSVS have been added (the small installer executable and the full ISO images).

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -37,7 +37,7 @@
      <li><a href="#scons_install">1.3 Installation</a></li>
     </ul></li>
 
-    <li><a href="#MSVS">2. MS Visual C++ 2005 Express Edition</a>
+    <li><a href="#MSVS">2. MS Visual Studio (MSVS) Express</a>
     <ul>
      <li><a href="#MSVS_why">2.1 Why install?</a></li>
      <li><a href="#MSVS_download">2.2 Download</a></li>
@@ -136,7 +136,7 @@
 
 <!-- MSVS -->
  <div id="MSVS" class="main_box">
-   <h1>2. MS Visual C++ 2005 Express Edition</h1>
+   <h1>2. MS Visual Studio (MSVS) Express</h1>
 
    <div id="MSVS_why" class="main_h2">
     <h2>2.1 Why install?</h2>
@@ -145,16 +145,44 @@
 
    <div id="MSVS_download" class="main_h2">
     <h2>2.2 Download</h2>
-     <p>The <a href="http://msdn.microsoft.com/vstudio/express/visualc/">Express Edition of MS Visual C++</a> is a cost-free <a href="http://msdn.microsoft.com/vstudio/express/visualc/download/">download</a> from the Microsoft website.  The download size for MS Visual C++ 2005 Express can be up to 460 Mb and can be installed by two methods.  The first is to download and run the <a href="http://go.microsoft.com/fwlink/?LinkId=51410&amp;clcid=0x409">installation executable file</a> and then install the <a href="http://msdn.microsoft.com/vstudio/express/visualc/usingpsdk/">Microsoft Platform SDK</a>.</p>
+     <p>The <a href="http://www.microsoft.com/visualstudio/eng/products/visual-studio-express-products">Express Edition of MS Visual Studio</a> is a cost-free download from the Microsoft website.  You will need to choose the version suitable for your operating system.  The download size for MS Visual Studio Express is anywhere between 500 Mb to 2 Gb and can be installed by two methods.  The first is to download and run the <a href="http://go.microsoft.com/fwlink/?LinkId=51410&amp;clcid=0x409">installation executable file</a> and then install the <a href="http://msdn.microsoft.com/vstudio/express/visualc/usingpsdk/">Microsoft Platform SDK</a>.</p>
 
-     <p>The second method is to <a href="http://msdn.microsoft.com/vstudio/express/support/install/">download</a> and burn a CD image containing all the software.  The CD image is available in two formats, an <a href="http://go.microsoft.com/fwlink/?linkid=54766">.IMG file</a> and an <a href="http://go.microsoft.com/fwlink/?linkid=57034">.ISO image</a>.  The CD image contains five programs:  Microsoft .NET Framework 2.0;  Microsoft MSDN Express Library 2005;  Microsoft SQL Server 2005 Express Edition;  MS Visual C++ Express Edition;  and Microsoft Windows Installer 3.1.  No additional software is required if installing from the CD image.</p>
+     <p>The second method is to download and burn a CD image containing all the software.  No additional software is required if installing from the CD image (ISO image).  The following is a list of handy links for downloading the different files for various MSVS versions (in English):</p>
    </div>
+
+<table cellspacing="10">
+  <tbody>
+    <tr>
+      <td><strong>Express edition</strong></td>
+      <td><strong>Installation executable</strong></td>
+      <td><strong>ISO image</strong></td>
+    </tr>
+    <tr>
+      <td>MS Visual Studio 2005 Express</td>
+      <td><a href="http://go.microsoft.com/fwlink/?LinkId=51410&amp;clcid=0x409">http://go.microsoft.com/fwlink/?linkid=51410&amp;clcid=0x409</a></td>
+      <td><a href="http://go.microsoft.com/fwlink/?linkid=57034">http://go.microsoft.com/fwlink/?linkid=57034</a></td>
+    </tr>
+    <tr>
+      <td>MS Visual Studio 2008 Express (SP1)</td>
+      <td><a href="http://go.microsoft.com/?linkid=7729279">http://go.microsoft.com/?linkid=7729279</a></td>
+      <td><a href="http://www.microsoft.com/en-us/download/details.aspx?id=13276">http://www.microsoft.com/en-us/download/details.aspx?id=13276</a></td>
+    </tr>
+    <tr>
+      <td>MS Visual Studio 2010 Express</td>
+      <td><a href="http://go.microsoft.com/?linkid=9709949">http://go.microsoft.com/?linkid=9709949</a></td>
+      <td><a href="http://go.microsoft.com/?linkid=9709969">http://go.microsoft.com/?linkid=9709969</a></td>
+    </tr>
+    <tr>
+      <td>MS Visual Studio 2012 Express for Windows Desktop</td>
+      <td><a href="http://go.microsoft.com/?linkid=9816758">http://go.microsoft.com/?linkid=9816758</a></td>
+      <td><a href="http://go.microsoft.com/?linkid=9816768">http://go.microsoft.com/?linkid=9816768</a></td>
+    </tr>
+  </tbody>
+</table>
 
    <div id="MSVS_install" class="main_h2">
     <h2>2.3 Installation</h2>
-     <p>If the iso image has been downloaded and burnt onto CD, inserting the CD will commence the installation process.  The installation wizard is relatively straight forward and the software can be installed anywhere.</p>
-
-     <p>If all five components of MS Visual C++ 2005 Express Edition have been installed, the size of all the installed files on the disk is ~1.6 Gb.</p>
+     <p>If the ISO image has been downloaded and burnt onto CD, inserting the CD will commence the installation process.  The installation wizard is relatively straight forward and the software can be installed anywhere.  You can also use the ISO image directly without burning it to disk, if you know how.</p>
    </div>
 
    <div id="MSVS_probs" class="main_h2">
